[package]
name = "ym-telegram-bot"
version = "0.1.0"
edition = "2021"
description = "Telegram бот для переноса треков из Яндекс.Музыки без цензуры"

[dependencies]
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
scraper = "0.22"
anyhow = "1"
dotenvy = "0.15"
log = "0.4"
fern = { version = "0.7", features = ["colored"] }
chrono = "0.4"
futures = "0.3"
tempfile = "3"
yt-dlp = "2.6"
yandex-music = "0.4.10"
tokio-util = "0.7.18"
bytes = "1"
